# Rich1MDCS

./: .gitignore  CMakeLists.txt  README  setup.make
CreateDBLayer/: CreateDBLayer.py  CreateDBLayer_2015.py  HPD_magUp.xml  radiusScaling.py
CreateDBLayer/usera/anandi/DetDB/MDMS-RICH1-MagDOWN-RunNumber171282/Conditions/Rich1/Environment/: HPD.xml
CreateDBLayer/usera/anandi/DetDB/MDMS-RICH1-MagUP-RunNumber171986/Conditions/Rich1/Environment/: HPD.xml
CreateDBLayer/usera/hilld/DetDB/MDMS-RICH1-MagUP-RunNumber136273/Conditions/Rich1/Environment/: HPD.xml
CreateDBLayer/usera/hilld/DetDB/MDMS-RICH1-MagUP-RunNumber136319-withHPD11-fromRunNumber136273/Conditions/Rich1/Environment/: HPD.xml
Make_Trends/: MakeTrends  MakeTrends.C  Makefile
cmt/: cleanup.csh  cleanup.sh  install.x86_64-slc6-gcc49-opt.history  requirements  setup.csh  setup.sh
doc/: HPD.xml  README.txt  release.notes
python/: rawDataToNtuple.py  runMDCSParamFitter.py  runMDCSParamFitter_Donal.py  runMDCSPeakFinder.py  runMDCSPeakFinder_ganga.py
python/batchjobs/: RichMDCS.sh
scripts/: CleanHPD.cpp  CleanHPD.h  CleanRun.C  Functions4Cleaning.C  PatternCleaning.make  PatternCleaning.makesav  PatternCleaning_dependencies.make  mystyle.h
scripts/PatternCleaning_deps/: CleanRun_C.stamp
src/: IHitMapManagerTool.h  MDMFitParameters.cpp  MDMFitParameters.h  MDMGridModel.cpp  MDMGridModel.h  MDMHitMap.cpp  MDMHitMap.h  MDMHitMapManager.cpp  MDMHitMapManager.h  MDMRich1Algorithm.cpp  MDMRich1Algorithm.h  MDMSmartIDCache.h
(+1 files in other folders)
